--- a/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
+++ b/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
@@ -181,7 +181,7 @@
     \end{enumerate}
 
 \section*{DHCP exercises}
-    For the exercises in this section, the network topology is given in Fig. 1.3, where all the hosts are connected to a single network segment whitout their default IP addresses.
+    For the exercises in this section, the network topology is given in Fig. 1.3 (\ref{fig:1.3}), where all the hosts are connected to a single network segment whitout their default IP addresses.
 
     \begin{center}
         %	\newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
@@ -209,7 +209,8 @@
                         \draw[thick] (h6) -- (s);
                         \draw[thick] (h7) -- (s);
                     \end{tikzpicture}
-                    \caption{A single segment network}        
+                    \caption{\textbf{Figure 1.3} A single segment network}
+                    \label{fig:1.3}   
                 \end{figure}
             \end{flushright}
         \end{minipage}
@@ -229,9 +230,9 @@
         When shakti is successfully reconfigured, execute \textbf{ifconfig -a} or \textbf{ip a} to display its
         network interface configurations and execute \textbf{netstat -rn} or \textbf{ip r} to display its routing table.\\
         Save the outputs for the lab report.
-        \item Then, repeat 3 for \texttt{h3}.
-        \item Repeat 3 for \texttt{h4}.
-        \item Repeat 3 for \texttt{h5}.
+        \item Then, repeat 5 for \texttt{h3}.
+        \item Repeat 5 for \texttt{h4}.
+        \item Repeat 5 for \texttt{h5}.
     \end{enumerate}
     Terminate \textbf{wireshark}. Print out the DHCP messages for the lab report. \\
     Save the DHCP server output on \texttt{h1} for the lab report.
@@ -353,6 +354,7 @@
     Config \texttt{/etc/ntp.conf} in \texttt{other\_host} and add \textbf{server 128.238.66.100} to config file.\\
     Start the NTP clients on your host, by \textbf{service ntp start}.\\
     Wait for several minutes. Then terminate the \textbf{tcpdump} program. Analyze the captured NTP packets. Print one of the NTP packets for the lab report.\\
+    Examine \textbf{ntp} server configuration by run \textbf{ntpq -p}.\\
     Execute \textbf{ntptrace} to show the client/server relation of NTP.\\
 
     \subsection*{Report}
@@ -379,11 +381,31 @@
     Login to the router, execute \textbf{write term} to display the current router configuration.
     Execute \textbf{show ip nat translations} in the \textit{Privileged EXEC} mode to display the translation table.
     Save both outputs for the lab report.\\
-    We use linux instead a router and config it to use as \textbf{NAT} and \textbf{PAT}\footnote{\href{http://www.solutionsatexperts.com/iptables-nat-pat/}{linxu-iptables-NAT-PAT}}
     \subsection*{Report}
     \begin{enumerate}
         \item How many entries were there in the translation table? Why?
     \end{enumerate}
+    
+    \subsection*{NAT Router Configuration in Fig. 8.7}
+    \begin{verbatim}
+        ip nat pool mypool 128.238.61.102 128.238.61.103 netmask 255.255.255.0
+        ip nat inside source list 8 pool mypool
+
+        ip nat inside source static 10.0.0.7 128.238.61.104
+
+        interface ethernet 0
+        ip address 128.238.61.1 255.255.255.0
+        no shut
+        ip nat outside
+
+        interface ethernet 1
+        ip address 10.0.0.1 255.0.0.0
+        no shut
+        ip nat inside
+
+        access-list 8 deny host 10.0.0.7
+        access-list 8 permit 10.0.0.0 0.0.0.255
+    \end{verbatim}
 
 \section{NAT Visibility}
     Keep the login session to the router running. Execute \textbf{tcpdump -exn -nn} or \textbf{wireshark} on all the hosts. \\
@@ -430,24 +452,6 @@
         If yes, explain how this can be done.
     \end{enumerate}
 
-    \subsection*{NAT Router Configuration in Fig. 8.7}
-    \begin{verbatim}
-        ip nat pool mypool 128.238.61.102 128.238.61.103 netmask 255.255.255.0
-        ip nat inside source list 8 pool mypool
-
-        ip nat inside source static 10.0.0.7 128.238.61.104
-
-        interface ethernet 0
-        ip address 128.238.61.1 255.255.255.0
-        ip nat outside
-
-        interface ethernet 1
-        ip address 10.0.0.1 255.0.0.0
-        ip nat inside
-
-        access-list 8 deny host 10.0.0.7
-        access-list 8 permit 10.0.0.0 0.0.0.255
-    \end{verbatim}
     \subsection*{PAT Router Configuration in Fig. 8.7}
     \begin{verbatim}
         ip nat inside source list 8 interface ethernet 0 overload
@@ -456,10 +460,12 @@
 
         interface ethernet 0
         ip address 128.238.61.1 255.255.255.0
+        no shut
         ip nat outside
 
         interface ethernet 1
         ip address 10.0.0.1 255.0.0.0
+        no shut
         ip nat inside
 
         access-list 8 deny host 10.0.0.7
@@ -468,7 +474,7 @@
 
 \section*{Socket programming exercises}
 \section{Socket programming}
-    Examine the UDP socket programs \texttt{/home/netlab/UDPserver.c} and \texttt{/home/netlab/UDPclient.c} to learn how to write a UDP socket program.
+    Examine the UDP socket programs \texttt{/home/netlab/code/UDPserver.c} and \texttt{/home/netlab/code/UDPclient.c} to learn how to write a UDP socket program.
     Compile the C programs using \texttt{gcc -o UDPserver UDPserver.c -lnsl} and \texttt{gcc -o UDPclient UDPclient.c -lnsl}. \\
     Start \textbf{tcpdump host \textit{remote\_host}} \textbf{wireshark} to capture packets from or to a remote host. \\
     On the remote host, start the UDP server by \textbf{UDPserver server\_port}.
@@ -480,6 +486,12 @@
 \section{Socket options}
     Execute \textbf{man setsockopt} to display the various socket options and how to set them.\\
     Examine the \textbf{netspy} and \textbf{netspyd} source code in Appendix C.2 to see how to create a multicast socket and how to set the TTL value for the packets.
+
+    \subsection*{Report}
+    \begin{enumerate}
+        \item Explain the various options you could set on socket.
+        \item Explain the difference between a socket and multicast socket.
+    \end{enumerate}
 
 \section{FTP Socket programming}
     This is an optional exercise on socket programming.
