--- a/9 Network management and security/Network management and security.tex
+++ b/9 Network management and security/Network management and security.tex
@@ -29,6 +29,11 @@
 \usepackage[colorlinks=true,plainpages=true,citecolor=blue,linkcolor=blue,urlcolor=cyan]{hyperref}
 %\usepackage{hyperref}
 
+\usepackage{framed,verbatim}
+\definecolor{shadecolor}{rgb}{.9, .9, .9}
+\newenvironment{grayverbatim}%
+   {\snugshade\verbatim}%
+   {\endverbatim\endsnugshade}
 
 %%% Equation and float numbering
 \numberwithin{equation}{section}
@@ -79,8 +84,7 @@
     \href{mailto:khamse@ut.ac.ir}{khamse@ut.ac.ir}\\\\
     \normalsize \href{mailto:m.borhani@ut.ac.ir}{Muhammad Borhani} - \FR{محمد برهانی}\\
 	\normalsize \href{mailto:a.a.khordadi@ut.ac.ir}{Amirahmad Khordadi} - \FR{امیر احمد خردادی}\\
-	\normalsize \href{mailto:sina\_kashipazha@ut.ac.ir}{Sina Kashi pazha} - \FR{سینا کاشی پزها}\\
-	\normalsize \href{mailto:mashahsavand@ut.ac.ir}{Mohammad Ali Shahsavand} - \FR{محمد علی شاهسوند}
+	\normalsize \href{mailto:sina\_kashipazha@ut.ac.ir}{Sina Kashi pazha} - \FR{سینا کاشی پزها}
 }
 
 \date{\vspace{30pt}\today\\\vspace{10pt}{\selectlanguage{farsi}\today}}
@@ -109,202 +113,161 @@
 	%\tableofcontents
 	
 	\pagebreak
-	
-	\section*{Exercises on secure applications}
-	\section{Hacking}
-	In this exercise we will study security vulnerability of ftp and telnet protocol . To do so, wi will create mininet topology with single hub\footnote{hub forwards incoming packets to all of its ports, which means it always floods packets} connected to three hosts then we will connect from h1 to h2 through ftp and telnet connection and capture h1 password on h3. Let's do it.
-	
+
+\section*{SNMP exercises}
+	For the exercises in this section, the network topology is given in Fig. 1.3, where all the hosts are connected in a single network segment using their IP addresses, i.e., from 128.238.66.100 to 128.238.66.102.\\
+	Before the lab, the lab instructor should:
 	\begin{enumerate}
-		\setlength{\itemindent}{10pt}
-		\item Start pox controller with below command to force mininet switches act like hub.
-		\begin{enumerate}
-			\setlength{\itemindent}{10pt}
-			\item [\$]  \texttt{python pox.py openflow.of\_01 -{}-address=127.0.0.1 -{}-port=6333 forwarding.hub}
-		\end{enumerate}
-		\item Run below command to start mininet with one single switch and three hosts and connect it to pox controller.
-		\begin{enumerate}
-			\setlength{\itemindent}{10pt}
-			\item [\$]  \texttt{sudo mn -{}-topo single,3 -{}-controller remote,ip=127.0.0.1,port=6633}
-		\end{enumerate}
-		\item start ftp server on h2 with:
-		\begin{enumerate}
-			\setlength{\itemindent}{10pt}
-			\item [h2>] \texttt{/usr/sbin/vsftpd}
-		\end{enumerate}
-		\item Run \textbf{\texttt{wireshark \&}} on h3
-		\item Login to h2 and then run ftp from h1
-		\begin{enumerate}
-			\setlength{\itemindent}{10pt}
-			\item [h1>] \texttt{ftp 10.0.0.2}
-		\end{enumerate}
-		\item Download 1 file (like configuration)
-		\item Capture h1 password on wireshark output
-		
+		\item Backup the original \textbf{snmpd} configuration file:\\
+		\, \textbf{mv /etc/snmp/snmpd.conf /etc/snmp/snmpd.conf.save}.
+		\item Create a simple configuration file \texttt{/etc/snmp/snmpd.conf} with a single line defining a read-only community guest:
 	\end{enumerate}
-	
-	Repeat the above experiment, but use telnet to connect from h1 to h2 and capture h1 password on h3. \footnote{Don't foget to restart xinetd with \texttt{`/etc/init.d/xinetd restart`} on h2 to start telnet server. }
+	\begin{grayverbatim}
+		rocommunity guest
+	\end{grayverbatim}
+
+\section{SNMP service and MIB struct}
+	Use \textbf{pgrep snmpd} to check if \textbf{snmpd} is started. Try to stop and then start the SNMP agent daemon using \textbf{service snmpd start|stop}.\\
+	Study the \textbf{snmpd} configuration file \texttt{/etc/snmp/snmpd.conf}. Also study the default configuration file \texttt{/etc/snmp/snmpd.conf.save}. This file is well commented. Read the comments and study the configuration options.\\
+	Study the MIB files in the \texttt{/usr/share/snmp/mibs} directory. Examine the Interface MIB \texttt{IF-MIB.txt} and the TCP MIB \texttt{TCP-MIB.txt} to see the MIB objects and data types. Save these two files for the lab report.
+
+	\subsection*{Report}
+	\begin{enumerate}
+		\item What is the community name used in this lab? What is the use of the
+		community name?
+		\item What is the data type for the MIB object \texttt{ifMtu.2}? What is the definition of the MIB object \texttt{ifPhysAddress} and \texttt{ifInOctets}?
+		\item What is the data type and definition of \texttt{tcpRtoAlgorithm}? What values are allowed for \texttt{tcpRtoAlgorithm}? What is the definition of \texttt{tcpMaxConn}?
+	\end{enumerate}
+
+\section{SNMP list objects}
+	Use \textbf{snmpwalk -v 2c -c guest localhost interface} to display the Interface MIB.\\
+	Use \textbf{snmpwalk -v 2c -c guest localhost tcp} to display the TCP MIB.\\
+	Run from another hsot \textbf{telnet \textit{remote\_host} echo} (use \texttt{ctrl+]} to terminate \textbf{telnet}) and try egain to run \textbf{snmpwalk -v 2c -c guest localhost tcp}. Try to run \textbf{snmpwalk -v 2c -c guest \textit{remote\_host} tcp}.\\
+	You may run \textbf{man snmpwalk} to find out the meanings of the options used in the commands. Compare the outputs with the MIB files you saved in the previous exercise. Also compare the outputs of the first command with that of \textbf{ifconfig -a}.\\
+	Retry the \textbf{snmpwalk} commands, but change guest to public. Can you display the MIBs this time?
 	
 	\subsection*{Report}
 	\begin{enumerate}
-		\setlength{\itemindent}{0pt}
-		\item Can you see the login ID and the password in the \texttt{FTP} experiment? Submit the two packets you captured.
-		\item Can you see the login ID and the password in the \texttt{TELNET} experiment? Submit the packets you captured.
-		\item What is the difference between \texttt{FTP} and \texttt{TELNET} in their transmission of user ID’s and passwords? Which one is more secure?
+		\item What is the MTU of the Ethernet interface? What is the MTU of the loopback interface? Justify your answer with the \textbf{snmpwalk} output and the \textbf{ifconfig} output.
+		\item Why did the snmpwalk command with a community name public fail?
 	\end{enumerate}
-	
-	\section{Secure Transfer}
-	Run previous mininet topology and connect it to pox controller but rather than using ftp and telnet use ssh and \texttt{sftp} as described in below steps.
-	
-	\begin{enumerate}
-		\setlength{\itemindent}{10pt}
-		\item Do step 1 and 2 frome previous section
-		\item restart ssh service on h2 to enable \texttt{ssh} and \texttt{sftp} service on it with:
-		\begin{enumerate}
-			\setlength{\itemindent}{10pt}
-			\item [h2>] \texttt{service ssh restart}
-			\item [h2>] \texttt{/usr/lib/openssl/sftp-server \&}
-		\end{enumerate}
-		\item Run \texttt{wireshark \&} on h3
-		\item Login to h2 \texttt{sftp} from h1 by:
-		\begin{enumerate}
-			\setlength{\itemindent}{10pt}
-			\item [h1>] \texttt{sftp 10.0.0.2}
-		\end{enumerate}
-		\item Download 1 file (like configuration)
-		\item Capture packets on wireshark output
-		
-	\end{enumerate}
-	
-	Repeat the above experiment, but use ssh and save the wireshark output for lab report.
+
+\section{SNMP get remote object}
+	Execute \textbf{tcpdump udp port 161} or \textbf{wireshark} to capture SNMP messages.\\
+	Execute \textbf{snmpget -v 2c -c guest \textit{remote\_host} IF-MIB::ifMtu.1} to get the MIB object \texttt{IF-MIB::ifMTU.1} from a remote machine.\\
+	Save the \textbf{snmpget} output and terminate \textbf{tcpdump}.\\
+	Use \textbf{wireshark} to analyze the format of the captured SNMP Get and Response messages. Print the messages for the lab report.
 	
 	\subsection*{Report}
 	\begin{enumerate}
-		\setlength{\itemindent}{0pt}
-		\item In each experiment, can you extract the password from the tcpdump output? Can you read the \texttt{IP, TCP, SSH} headers? Can you read the \texttt{TCP} data?
+		\item What is the port number used by the SNMP agent?
+		\item What are the full text-based and numerical object ID’s of the MIB object \texttt{interface.ifMTU.2}? What was the value returned? Justify the answer using Fig. 9.3 and the \textbf{ifconfig} output.
+		\item Draw the format of one of the SNMP messages saved, including the name and value of each field.
+	\end{enumerate}
+
+\section*{Exercises on secure applications}
+	
+\section{Plain Transfer}
+	Execute \textbf{tcpdump -enX -s 100} or \textbf{wireshark} to capture packets between your machine and a remote machine.\\
+	Execute \textbf{ftp} remote machine. When prompted, type “1111” for the login ID, and “2222” for the login password. Then terminate \textbf{tcpdump} and \textbf{ftp}.\\
+	Use \textbf{wireshark} to analyze and print the packets that carry the login ID and the password for the lab report.\\
+	Repeat the above experiment, but use \textbf{telnet} and the \textbf{wireshark} to analyze and print output.
+
+	\subsection*{Report}
+	\begin{enumerate}
+		\item Can you see the login ID and the password in the FTP experiment? Submit the two packets you printed.
+		\item Can you see the login ID and the password in the TELNET experiment? Submit the packets you printed.
+		\item What is the difference between FTP and TELNET in their transmission of user ID’s and passwords? Which one is more secure?
+	\end{enumerate}
+
+\section{Secure Transfer}
+	Start \textbf{ssh} service on target machine by \textbf{service ssh start}.\\
+		In this exercise, students pair up to work together using two workstations.
+	
+	Execute \textbf{tcpdump -enX -s 100} or \textbf{wireshark} host your host and remote host to capture packets between your machine and a remote machine.\\
+	Execute \textbf{sftp \textit{remote\_machine}}. When prompted, type “yes” to continue the connection and “1111” for the login password. Then terminate \textbf{tcpdump}.\\
+	Use \textbf{wireshark} to analyze and print one or two \textbf{SSH} packets for the lab report.\\
+	Repeat the above experiment, but use \textbf{ssh} and the \textbf{wireshark} to analyze and print output.\\
+
+	\subsection*{Report}
+	\begin{enumerate}
+		\item In each experiment, can you extract the password from the \textbf{tcpdump} output? Can you read the IP, TCP, SSH headers? Can you read the TCP data?
 		\item What is the client protocol (and version) used in both cases?
-		\item What is the port number used by the \texttt{ssh} server? What is the port number used by the \texttt{sftp} server? Justify your answer using the wireshark output and the \texttt{/etc/services} file.
+		\item What is the port number used by the \textbf{ssh} server? What is the port number used by the sftp server? Justify your answer using the \textbf{tcpdump} output and the \texttt{/etc/services} file.
 	\end{enumerate}
-	
-	
-	\section*{Exercises on Firewalls and Iptables}
-	\section{Firewall basic}
-	Start mininet with default topology and Execute `\texttt{iptables -L -v}` on h1 and h2 to list the existing rules in the filter table. Save the output for the lab report.\\
-	\\
+
+\section*{Exercises on Firewalls and Iptables}
+	In this exercise using two workstations.
+
+\section{Firewall basic}
+	Execute \textbf{iptables -L -v} to list the existing rules in the filter table. Save the output for the lab report.\\
 	Append a rule to the end of the \texttt{INPUT} chain, by executing
-	
 	\begin{itemize}
 		\setlength{\itemindent}{10pt}
-		\item [h2>] \texttt{iptables -A INPUT -v -p TCP -{}-dport 23 -j DROP} 
+		\item \textbf{iptables -A INPUT -v -p TCP -{}-dport 23 -j DROP} 
 	\end{itemize}
 	
 	\setlength{\parindent}{0pt}
-	on h2. Run iptables -L -v again on both hosts to display the filter table. Save the output.\\
-	
-	
+	Run \textbf{iptables -L -v} again on both hosts to display the filter table. Save the output.\\
+	On both machines, execute \textbf{tcpdump host \textit{your\_host} and \textit{remote\_host}}. Then, \textbf{telnet} to the host where the rule is set from the remote machine. Save the tcpdump output for the lab report.
+
+	\subsection*{Report}
 	\begin{enumerate}
-		\setlength{\itemindent}{0pt}
-		\item Start telnet server on h2 with \texttt{`/etc/init.d/xinetd restart`}.
-		\item Capture packets on both hosts with wireshark
-		\item Try to login with telnet from h1 to h2
+		\item Can you \textbf{telnet} to the host from the remote machine?
+		\item From the \textbf{tcpdump} output, how many retries did \textbf{telnet} make? Explain the exponential backoff algorithm of TCP timeout and retransmission.
 	\end{enumerate}
 	
-	\subsection{Lab Report}
+\section{Firewall Action}
+	Delete the rule created in the last exercise, by:	
+	\begin{itemize}
+		\item \textbf{iptables -D INPUT -v -p TCP -{}-dport 23 -j DROP}
+	\end{itemize}
+	
+	Then, append a new rule to the \texttt{INPUT} chain:	
+	\begin{itemize}
+		\item \textbf{iptables -A INPUT -v -p TCP -{}-dport 23 -j REJECT -{}-reject-with tcp-reset} 
+	\end{itemize}
+	
+	Execute \textbf{iptables -L -v} to display the new rule.\\
+	On both machines in your topology, restart \textbf{tcpdump}, and then \textbf{telnet} to the host where the rule is set from the remote machine. Save the wireshark output for the lab report.
+	
+	\subsection{Report}
 	\begin{enumerate}
 		\setlength{\itemindent}{0pt}
-		\item Can you telnet to the host from the remote machine?
-		\item From the wireshark output, how many retries did \texttt{telnet} make? Explain the exponential \texttt{backoff} algorithm of \texttt{TCP} timeout and retransmission.
+		\item Explain the difference between the \textbf{tcpdump} outputs of this exercise and the previous exercise. How many attempts did \texttt{TCP} make this time?
 	\end{enumerate}
-	
-	\section{Firewall Action}
-	Keep previous mininet running and delete the rule created in the last exercise on h2, by:
-	
+
+\section*{Exercises on secure Apache server}
+	In the exercises in this section, using two workstations from \texttt{http-server} and \texttt{gui} hosts.
+
+\section{Generate Certificate}
+	Run \textbf{man openssl} to study the OpenSSL command line tool.\\
+	Create a new private key for the Apache server, using:
 	\begin{itemize}
-		\setlength{\itemindent}{10pt}
-		\item [h2>] \texttt{iptables -D INPUT -v -p TCP -{}-dport 23 -j DROP}
+		\item \textbf{openssl genrsa 1024 > /etc/apache2/ssl/server.key}
 	\end{itemize}
-	
-	\setlength{\parindent}{0pt}
-	Then, append a new rule to the \texttt{INPUT} chain:
-	
+	To create a self-signed certificate, go to the \texttt{/etc/apache2/ssl/} directory, and execute:
 	\begin{itemize}
-		\setlength{\itemindent}{10pt}
-		\item [h2>] \texttt{iptables -A INPUT -v -p TCP -{}-dport 23 -j REJECT -{}-reject-with tcp-reset} 
+		\item \textbf{openssl req -new -key /etc/apache2/ssl/server.key -out /etc/apache2/ssl/server.crt}
 	\end{itemize}
-	
-	\setlength{\parindent}{0pt}
-	Execute \textbf{iptables -L -v} to display the new rule. On both machines in your topology, restart wireshark output, and then telnet from h1 to h2. Save the wireshark output for the lab report.
-	
-	\subsection{Lab Report}
-	\begin{enumerate}
-		\setlength{\itemindent}{0pt}
-		\item Explain the difference between the wireshark outputs of this exercise and the previous exercise. How many attempts did \texttt{TCP} make this time?
-	\end{enumerate}
-	
-	\pagebreak
-	
-	\section*{Exercises on secure Apache server}
-	In the exercises in this section you don't need to create mininet topology, run command on your ubuntu terminal.
-	\section{Raw HTTP}
-	Create two files, \texttt{index.html} and \texttt{success.html}, in \texttt{/var/www/html} directory: \\
-	\textbf{\$ sudo nano index.html}
-	\begin{verbatim}
-	<!-- index.html --> 
-	<!DOCTYPE html>
-	<html>
-	<body>
-	<form action="/success.html"  method="POST">
-	Username:<br>
-	<input type="text" name="user" value="user">
-	<br>
-	Password:<br>
-	<input type="password" name="pass" value="1234">
-	<br><br>
-	<input type="submit" value="Submit">
-	</form>
-	</body>
-	</html>
-	\end{verbatim}
-	\textbf{\$ sudo nano success.html}
-	\begin{verbatim}
-	<!-- success.html --> 
-	<!DOCTYPE html>
-	<html>
-	<body>
-	<h2>Goog Job!</h2>
-	<a href="/">back to login form!</a>
-	</body>
-	</html>
-	\end{verbatim}
-	
-	Now open your browser and enter your VM's IP address in URL bar and submit the login form:\\
-	\texttt{http://172.18.133.XX} \\
-	Save \textbf{wireshark} output for your lab report.
-	\section{Secure HTTP}
-	\subsection{Activate the SSL Module}
-	Enable the module by typing: \\
-	\textbf{\$ sudo a2enmod ssl} \\
-	After you have enabled SSL, you'll have to restart the web server for the change to be recognized: \\
-	\textbf{\$ sudo service apache2 restart} \\
-	With that, our web server is now able to handle SSL if we configure it to do so. \\
-	\subsection{Create a Self-Signed SSL Certificate}
-	Let's start off by creating a subdirectory within Apache's configuration hierarchy to place the certificate files that we will be making:\\
-	\textbf{\$ sudo mkdir /etc/apache2/ssl} \\
-	Now that we have a location to place our key and certificate, we can create them both in one step by typing: \\
-	\textbf{\$ sudo openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/apache2/ssl/apache.key -out /etc/apache2/ssl/apache.crt}\footnote{You can use simple command as: `\texttt{make-ssl-cert generate-default-snakeoil --force-overwrite}' without editing default apache ssl config} \\
-	Let's go over exactly what this means. \\
+	Then you will be asked a number of questions, regarding the location, affiliation, etc. of the Apache server. After you type in the answers, a self-signed certificate is created at \texttt{/etc/apache2/ssl/server.crt}\\
+	You can generate private key and self-signed certificate whit one command by:
 	\begin{itemize}
-		\item \textbf{openssl}: This is the basic command line tool provided by OpenSSL to create and manage certificates, keys, signing requests, etc.
-		\item \textbf{req}: This specifies a subcommand for X.509 certificate signing request (CSR) management. X.509 is a public key infrastructure standard that SSL adheres to for its key and certificate managment. Since we are wanting to create a new X.509 certificate, this is what we want.
-		\item \textbf{-x509}: This option specifies that we want to make a self-signed certificate file instead of generating a certificate request.
-		\item \textbf{-nodes}: This option tells OpenSSL that we do not wish to secure our key file with a passphrase. Having a password protected key file would get in the way of Apache starting automatically as we would have to enter the password every time the service restarts.
-		\item \textbf{-days 365}: This specifies that the certificate we are creating will be valid for one year.
-		\item \textbf{-newkey rsa:2048}: This option will create the certificate request and a new private key at the same time. This is necessary since we didn't create a private key in advance. The rsa:2048 tells OpenSSL to generate an RSA key that is 2048 bits long.
-		\item \textbf{-keyout}: This parameter names the output file for the private key file that is being created.
-		\item \textbf{-out}: This option names the output file for the certificate that we are generating.	
+		\item \textbf{openssl req -x509 -nodes -days 365 -newkey rsa:1024 -keyout /etc/apache2/ssl/server.key -out /etc/apache2/ssl/server.crt}\footnote{You can use simple command as: `\texttt{make-ssl-cert generate-default-snakeoil --force-overwrite}' without editing default apache ssl config}\\
+		Let's go over exactly what this means.\\
+		\begin{itemize}
+			\item \textbf{openssl}: This is the basic command line tool provided by OpenSSL to create and manage certificates, keys, signing requests, etc.
+			\item \textbf{req}: This specifies a subcommand for X.509 certificate signing request (CSR) management. X.509 is a public key infrastructure standard that SSL adheres to for its key and certificate managment. Since we are wanting to create a new X.509 certificate, this is what we want.
+			\item \textbf{-x509}: This option specifies that we want to make a self-signed certificate file instead of generating a certificate request.
+			\item \textbf{-nodes}: This option tells OpenSSL that we do not wish to secure our key file with a passphrase. Having a password protected key file would get in the way of Apache starting automatically as we would have to enter the password every time the service restarts.
+			\item \textbf{-days 365}: This specifies that the certificate we are creating will be valid for one year.
+			\item \textbf{-newkey rsa:1024}: This option will create the certificate request and a new private key at the same time. This is necessary since we didn't create a private key in advance. The rsa:1024 tells OpenSSL to generate an RSA key that is 1024 bits long.
+			\item \textbf{-keyout}: This parameter names the output file for the private key file that is being created.
+			\item \textbf{-out}: This option names the output file for the certificate that we are generating.	
+		\end{itemize}
 	\end{itemize}
-	When you hit \texttt{ENTER}, you will be asked a number of questions. \\
-	The questions portion looks something like this: \\
-	
+
+	The questions portion looks something like this:
 	\begin{verbatim}
 	Country Name (2 letter code) [AU]:IR 
 	State or Province Name (full name) [Some-State]:Tehran 
@@ -314,47 +277,26 @@
 	Common Name (e.g. server FQDN or YOUR name) []:ece.ut.ac.ir 
 	Email Address []:netlab@ut.ac.ir 
 	\end{verbatim}
-	The key and certificate will be created and placed in your \texttt{/etc/apache2/ssl} directory.
-	\subsection{Configure Apache to Use SSL}
-	Open the file with root privileges now:\\
-	\textbf{\$ sudo nano /etc/apache2/sites-available/default-ssl.conf} \\
-	You should make some changes to it. \\
-	In the end, it will look something like this. The entries \texttt{SSLCertificateFile} and \texttt{SSLCertificateKeyFile}  were modified from the original file: \\
-	\begin{verbatim}
-	<IfModule mod_ssl.c>
-	<VirtualHost _default_:443>
-	ServerAdmin admin@example.com
-	ServerName ece.ut.ac.ir 
-	DocumentRoot /var/www/html
-	...
-	SSLCertificateFile /etc/apache2/ssl/apache.crt
-	SSLCertificateKeyFile /etc/apache2/ssl/apache.key
-	...
-	</VirtualHost>
-	</IfModule>
-	\end{verbatim}
-	Save and exit the file when you are finished.
-	\subsection{Activate the SSL}
-	Now that we have configured our SSL-enabled server, we need to enable it. \\
-	We can do this by typing: \\
-	\textbf{\$ sudo a2ensite default-ssl.conf} \\
-	We then need to restart Apache to load our new file:\\
-	\textbf{\$ sudo service apache2 restart} \\
-	This should enable your server, which will serve encrypted content using the SSL certificate you created.
-	\subsection{Test your Setup}
-	Now that you have everything prepared, you can test your configuration by visiting your server's IP address after specifying the https:// protocol: \\
-	\texttt{https://172.18.133.XX} \\
-	Now submit the login form.
-	Use \textbf{wireahark} output and examine the operation of SSL.
+
+	Save the output for the lab report.
+
+\section{HTTPS handshake and request}
+	Restart the Apache server to load the new key and the new certification: \textbf{service apache2 restart}.\\
+	Execute \textbf{wireshark} to capture the packets between your host and a remote host.\\
+	On the remote host, start the \texttt{Mozilla} web browser. After typing in the URL \texttt{https://your\_host}, a dialog window titled “Website Certified by an Unknown Authority” will pop up, reporting the reception of a certificate signed by an unknown authority and asking if you want to continue.\\
+	Click the “View Certificate” button. Then a “Certificate Viewer” window pops up, displaying detailed information about the received certificate. Examine the certificate and dump the window into a picture if necessary. Save the pictures for the lab report.\\
+	Click the “Continue” button in the “Website Certified by an Unknown Authority” dialog window to accept the certificate. Then terminate \textbf{wireshark} and Mozilla.\\
+	Use \textbf{wireshark} to examine the operation of SSL.
+	
 	
 	\subsection*{Report}
 	\begin{enumerate}
 		\setlength{\itemindent}{0pt}
 		\item What is the port number used by the secure Apache server?
-		\item Compare the general information of the received certificate with the make output saved in the last exercise. Are they consistent?
+		\item Compare the general information of the received certificate with the \textbf{openssl} output saved in the previous exercise. Are they consistent?
 		\item What is the Subject of the received certificate? Who is the Issuer of this certificate? Are they the same?
-		\item What is the Certificate Signature Algorithm used to generate and distribute this certificate?
+		\item What is the \texttt{Certificate Signature Algorithm} used to generate and distribute this certificate?
 		\item When was the certificate signed? When will it expire?
 	\end{enumerate}
-	
+
 \end{document}
