chapter 8: fix ntpq list

--- a/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
+++ b/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
@@ -353,7 +353,7 @@
     Config \texttt{/etc/ntp.conf} in \texttt{other\_host} and add \textbf{server 128.238.66.100} to config file.\\
     Start the NTP clients on your host, by \textbf{service ntp start}.\\
     Wait for several minutes. Then terminate the \textbf{tcpdump} program. Analyze the captured NTP packets. Print one of the NTP packets for the lab report.\\
-    Examine \textbf{ntp} server configuration by run \textbf{ntpq -p}.\\
+    Execute \textbf{ntpq -p} to get \textbf{ntp} server list.\\
     Execute \textbf{ntptrace} to show the client/server relation of NTP.\\
 
     \subsection*{Report}
